--- a/Day05/copypf/css/style.css
+++ b/Day05/copypf/css/style.css
@@ -2,6 +2,7 @@
 
 /*
 VARIABLES
+루트 지정하는거 연습해보기
 ================================================ */
 :root {
   --light-green: #d5edeb;
@@ -13,18 +14,15 @@ VARIABLES
 }
 
 /*
-GENERAL STYLING
 ================================================ */
 body {
   color: var(--brown);
-  background: url("../img/lfcLogoBg\ \(2\).png") no-repeat right bottom / cover
-    fixed;
+  background: url("../img/lfcLogoBg\ \(2\).png") no-repeat center / cover fixed;
 
   text-align: center;
 }
 
 /*
-COMMON
 ================================================ */
 p {
   line-height: 1.7;
@@ -115,7 +113,7 @@ SLIDE MENU
   top: 0;
   right: 0;
   z-index: 4;
-  padding: 8rem 2rem 2rem;
+  padding: 8rem 2rem;
   width: max(32vw, 20rem);
   height: 100vh;
   background-color: var(--brown);
@@ -223,7 +221,9 @@ GALLERY
   margin: 1rem 0;
 }
 .gallery-thumbnails img {
+  /* 종횡비 */
   aspect-ratio: 3/4;
+
   object-fit: cover;
   cursor: pointer;
 }
@@ -265,7 +265,7 @@ DESKTOP SIZE
     color: white;
     background: #cb2031;
   }
-
+  .swiper-wrapper > .swiper-slide > img
   /* SLIDE MENU */
   .btn-menu:hover {
     background-color: #cb2031;
